# cpp-project

./: Board.cpp  Board.h  CMakeLists.txt  Color.cpp  Color.h  Constants.h  Dice.cpp  Dice.h  Game.cpp  Game.h  Player.h  Property.cpp  Property.h  README.md  Railroad.cpp  Railroad.h  Set.cpp  Set.h  SetUtility.cpp  SetUtility.h  SpecialSquare.cpp  SpecialSquare.h  Square.cpp  Square.h  SquareFactory.h  Street.cpp  Street.h  Tradeable.hpp  Utility.cpp  Utility.h
Comand/: MoveCommand.hpp
Components/: Railroad.cpp  SpecialSquare.cpp  Square.h  Street.cpp  Tradeable.cpp  Tradeable.hpp  Utility.h
GameLogic/: GameLogic.cpp  GameLogic.h
States/: JailState.cpp  NormalState.h  State.h
UI/: GeneralUI.hpp  PlayerUI.hpp
controller/: GameController.cpp  GameController.hpp  GameLogic.cpp  GameLogic.h  SquareFactory.cpp  SquareFactory.h
controller/Comand/: AbstractCommand.hpp  BuyCommand.hpp  LandOnTradeableCommand.hpp  MoveCommand.cpp  Pay2PeerCommand.hpp  RollDiceCommand.hpp
controller/Command/: AbstractCommand.hpp  BuyCommand.hpp  LandOnTradeableCommand.cpp  MoveCommand.hpp  RollDiceCommand.cpp  RollDiceCommand.hpp
model/: Board.cpp  Board.h  Constants.h  Dice.h  GameLogic.h  GameState.cpp  GameState.hpp  Player.cpp  Player.h  Railroad.h  Set.h  SetStreet.cpp  SetStreet.h  SpecialSquare.h  Square.h  Street.cpp  Street.h  Tradeable.hpp  Utility.cpp
model/Components/: Board.h  Player.h  SetTradeable.hpp
model/Components/Set_class/: Set.h  SetRailroad.h  SetStreet.cpp  SetStreet.h  SetTradeable.hpp  SpecialSet.hpp
model/Components/Square_class/: Square.h
model/Components/Square_class/Tradeable_class/: Railroad.h  Street.h  Tradeable.cpp  Tradeable.hpp  Utility.h
model/States/: JailState.h  NormalState.cpp  State.h
view/UI/: GeneralUI.hpp  PlayerUI.hpp
